# cosmonaut-contract

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  execute.json  execute_output.json  init.sh  query_output.json  run.sh
answers/lesson1/: lesson1_execute_result.json  lesson1_query_result.json
answers/lesson2/: lesson2_execute_result.json  lesson2_query_result.json
answers/lesson3/: lesson3_execute_result.json  lesson3_query_result.json
artifacts/: checksums.txt  checksums_intermediate.txt  cosmonaut_contract-aarch64.wasm  cosmonaut_cw20-aarch64.wasm  cosmonaut_cw721-aarch64.wasm
contracts/cosmonaut-cw20/: Cargo.toml  README.md
contracts/cosmonaut-cw20/examples/: schema.rs
contracts/cosmonaut-cw20/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/cosmonaut-cw20/tests/: execute_query_test.rs  instantiate_test.rs
contracts/cosmonaut-cw721/: Cargo.toml
contracts/cosmonaut-cw721/examples/: schema.rs
contracts/cosmonaut-cw721/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  test.rs
contracts/cosmonaut-main/: Cargo.toml  README.md
contracts/cosmonaut-main/examples/: schema.rs
contracts/cosmonaut-main/schema/: execute_msg_for__nullable__metadata.json  instantiate_msg.json
contracts/cosmonaut-main/src/: contract.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  test.rs
env/registry/cache/github.com-1ecc6299db9ec823/: anyhow-1.0.52.crate  backtrace-0.3.64.crate  base64ct-1.5.1.crate  bigint-4.4.3.crate  bytecheck-0.6.7.crate  bytecheck_derive-0.6.7.crate  cargo-chef-0.1.37.crate  cargo-manifest-0.2.8.crate  cargo-run-script-0.1.0.crate  clap-3.2.11.crate  clru-0.4.0.crate  compiler_builtins-0.1.72.crate  const-oid-0.6.2.crate  cosmwasm-bignumber-2.2.0.crate  cosmwasm-crypto-0.16.6.crate  cosmwasm-crypto-0.16.7.crate  cosmwasm-crypto-1.0.0-beta8.crate  cosmwasm-crypto-1.0.0.crate  cosmwasm-derive-0.16.6.crate  cosmwasm-derive-0.16.7.crate  cosmwasm-derive-1.0.0-beta8.crate  cosmwasm-derive-1.0.0.crate  cosmwasm-schema-1.0.0-beta8.crate  cosmwasm-schema-1.0.0.crate  cosmwasm-std-0.16.3.crate  cosmwasm-std-0.16.7.crate  cosmwasm-std-1.0.0-beta8.crate  cosmwasm-std-1.0.0.crate  cosmwasm-storage-1.0.0-beta8.crate  cosmwasm-storage-1.0.0.crate  cosmwasm-vm-1.0.0.crate  cranelift-bforest-0.76.0.crate  cranelift-codegen-0.76.0.crate  cranelift-codegen-meta-0.76.0.crate  cranelift-codegen-shared-0.76.0.crate  cranelift-entity-0.76.0.crate  cranelift-frontend-0.76.0.crate  (+89 more)
examples/: schema.rs
lessons/lesson1/: Cargo.toml
lessons/lesson1/chapter6/: Cargo.toml
lessons/lesson1/chapter6/src/: main.rs
lessons/lesson1/src/: main.rs
lessons/lesson2/: Cargo.toml
lessons/lesson2/chapter8/: Cargo.toml
lessons/lesson2/src/: main.rs
lessons/lesson3/: Cargo.toml
lessons/lesson3/chapter8/: Cargo.toml
lessons/lesson3/chapter8/cw20-tokens/: Cargo.toml
lessons/lesson3/chapter8/main-contract/: Cargo.toml
lessons/lesson3/chapter8/src/: main.rs
lessons/lesson3/src/: main.rs
schema/: config.json
scripts/: init.sh  init_skeleton.sh  internal_run.sh  run.sh
skeleton/lesson1/: Cargo.toml  answer.md
skeleton/lesson1/src/: contract.rs  execute.rs  msg.rs
skeleton/lesson2/: Cargo.toml  answer.md
skeleton/lesson2/chapter8/: Cargo.toml
skeleton/lesson2/src/: execute.rs
skeleton/lesson3/: Cargo.toml  answer.md
skeleton/lesson3/chapter8/: answer.md
skeleton/lesson3/src/: contract.rs  execute.rs  query.rs
skeleton/lesson4/: answer.md
skeleton/lesson4/chapter2/: Cargo.toml  answer.md
skeleton/lesson4/src/: execute.rs
src/: contract.rs  error.rs  execute.rs  lib.rs  main.rs  msg.rs  query.rs  state.rs  test.rs  tests.rs
user1/contracts/cosmonaut-cw20/: Cargo.toml
user1/contracts/cosmonaut-main/: Cargo.toml
user1/targets/lesson1/: .rustc_info.json
(+416 files in other folders)
