[package]
name = "cosmonaut-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "contracts/*",
  "lessons/*"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.10"
cw20 = "0.13.4"
base = { path = "packages/base" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }



