[package]
name = "lesson1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
cw721-spaceship = {path="../../packages/cw721-spaceship"}
base = {path="../../packages/base"}
cosmwasm-std = { version = "1.0.0" }
