[package]
name = "lesson3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw20-tokens = {path="../../packages/cw20-tokens"}
cw721-spaceship = {path="../../packages/cw721-spaceship"}
main-contract = {path="../../packages/main-contract"}
base = {path="../../packages/base"}
cosmwasm-std = { version = "1.0.0" }
